source/grammar/tests/invalid/statements/const.qasm
const myvar;
const myvar = ;
const int[8] myvar = 8;
input const myvar = 8;
output const myvar = 8;
const input myvar = 8;
const output myvar = 8;
